added code of api authcontroller swagger authentication
